--- a/tuscany.css
+++ b/tuscany.css
@@ -1,3 +1,7 @@
+main {
+  display: block;
+}
+
 h1 {
   text-align: center;
   margin-top: 40px;
@@ -8,12 +12,12 @@ h1 {
   background-color: white;
 }
 
-main {
+/* .main-login {
   display: flex;
   justify-content: center;
   min-height: 870px;
   background-color: white;
-}
+} */
 
 .login_section {
   display: flex;
@@ -79,13 +83,13 @@ table {
   background-image: url("Images/carousel/carPizza.jpg");
   width: 100%;
   height: 300px;
-  padding-left: 0px;
-  padding-right: 0px;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .contact-main {
-  padding-left: 0px;
-  padding-right: 0px;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 footer {
@@ -172,6 +176,11 @@ footer {
   grid-template-columns: auto auto auto auto;
   grid-gap: 20px;
 }
+
+.btn-outline-primary {
+  margin-right: 10px;
+}
+
 /* .button-1 {
   background-color: rgb(102, 102, 102);
 } */
