--- a/tuscany.css
+++ b/tuscany.css
@@ -8,6 +8,10 @@ h1 {
   margin-bottom: 20px;
 }
 
+.grid-item {
+  display: flex;
+}
+
 .nav-item:hover {
   background-color: white;
 }
@@ -160,7 +164,7 @@ footer {
 
 .fa-twitter {
   margin-left: 10px;
-  color: #55ACEE;
+  color: #55acee;
 }
 
 .fa-linkedin {
@@ -169,12 +173,6 @@ footer {
 
 .fa-instagram {
   margin-left: 10px;
-}
-
-.container {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-gap: 20px;
 }
 
 .btn-outline-primary {
